Alpha release of site

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -49,8 +49,8 @@ http {
         client_body_timeout 60;
 
         # static content (django)
-        location @PREFIX@/static/ {
-            alias /var/www/html/static/;
+        location /static/ {
+            alias /var/www/html/;
         }
 
         # the rest comes from django
