Adding support for moving objects

--- a/docker/etc/nginx/nginx.conf
+++ b/docker/etc/nginx/nginx.conf
@@ -52,7 +52,11 @@ http {
 
         # static content (django)
         location /static/ {
-            alias /var/www/html/;
+            alias /var/www/html/static/;
+        }
+
+        location /media/ {
+            alias /var/www/html/media/;
         }
 
         # the rest comes from django
