Use supervisord to run multiple processes in one container

--- a/docker/etc/nginx/conf.d/default.conf
+++ b/docker/etc/nginx/conf.d/default.conf
@@ -20,7 +20,7 @@ server {
     # Proxy to Django backend
     # Django static files are served through the Python backend via the whitenoise middleware
     location / {
-        proxy_pass http://serol:8080;
+        proxy_pass http://127.0.0.1:8080;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_set_header X-Real-IP $remote_addr;
