Migrate to PostgreSQL
Migrate this application to the PostgreSQL database server. This will
migrate the application to the best database server service provided by
LCO.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 --extra-index-url=http://buildsba.lco.gtn/python/
-Django>2.1,<2.2
+Django~=2.2
 django-fsm
 django-rest-framework
 djangorestframework
@@ -7,16 +7,16 @@ djangorestframework-jsonp
 django-pagedown
 django-markdown-deux
 django-registration
-mysqlclient
-Pillow
+psycopg2==2.8.4
+Pillow==6.2.1
 requests
 six
-gunicorn[gevent]
+gunicorn[gevent]==20.0.4
 profanityfilter
 django-cors-headers
 numpy
-astropy
-astroscrappy
+astropy==3.2.3
+astroscrappy==1.0.8
 fits2image>=0.4.0
 fits_align>=0.4.3
 boto3
