--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ gunicorn[gevent]==20.0.4
 gevent==1.4.0
 profanityfilter
 django-cors-headers
-numpy=1.18.2
+numpy==1.18.2
 astropy==3.2.3
 astroscrappy==1.0.8
 fits2image>=0.4.0
