Upgrade django; switch to new requestids

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
 --extra-index-url=http://buildsba.lco.gtn/python/
-Django~=2.2
-django-fsm
-django-rest-framework
-djangorestframework
-djangorestframework-jsonp
-django-pagedown
+Django~=3.2.12
+django-fsm==2.8.0
+djangorestframework==3.13.1
+djangorestframework-jsonp==1.0.2
+django-pagedown==2.2.1
 django-markdown-deux
-django-registration
+django-registration==3.0
 psycopg2==2.8.4
 Pillow==6.2.1
 requests
-six
 gunicorn[gevent]==20.0.4
 gevent==1.4.0
 profanityfilter
 django-cors-headers
 numpy==1.18.2
-astropy==3.2.3
+astropy==4.3.1
+astroplan==0.7
 astroscrappy==1.0.8
 fits2image>=0.4.0
 fits_align>=0.4.3
