Use alpine linux

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,23 +5,21 @@ djangorestframework-jsonp==1.0.2
 django-pagedown==2.2.1
 django-markdown-deux
 django-registration==3.2
+django-storages==1.12.3
+django-user-messages==0.8.0
+django-widget-tweaks==1.4.12
+easy-thumbnails==2.8.1
 psycopg2==2.8.4
 Pillow==6.2.1
-requests
+requests==2.27.1
 gunicorn[gevent]==20.1.0
 gevent==21.12.0
 profanityfilter
-jinja2==3.0.3
-markupsafe==2.0.1
-django-cors-headers
+django-cors-headers==3.11.0
 numpy==1.21.2
 astropy==4.0
 astroplan==0.8
 astroscrappy==1.1.0
 fits2image>=0.4.0
 fits_align>=0.4.3
-boto3
-django-storages
-django-user-messages==0.8.0
-django-widget-tweaks==1.4.12
-easy-thumbnails==2.8.1
+boto3==1.20.50
