--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,11 @@ gunicorn[gevent]==20.1.0
 gevent==21.12.0
 profanityfilter==2.0.6
 django-cors-headers==3.11.0
-numpy==1.18
+numpy==1.21.6
 astropy==5.1
 astroplan==0.8
 astroscrappy==1.1.0
 fits2image>=0.4.0
 fits_align>=0.4.3
 boto3==1.20.50
-rollbar
+rollbar==0.16.3
